maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: '=' expected but ';' found.
    for (i<-0 to h-1){
^ShortestPathMaze:14: error: '(' expected but identifier found.
  k+=1
  ^